# beercan-bot

./: Cargo.toml
src/: delete_recover.rs  good_morning_darya.rs  main.rs  vaccine_reminder.rs
