[package]
name = "beercan-bot"
version = "0.2.0"
license = "MIT"
description = "Beercan community telegram bot."
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }

log = "^0.4"
rand = "^0.8"
futures = "^0.3"
structopt = "^0.3"
pretty_env_logger = "^0.4"

tokio = { version = "^1.11", features = ["full"] }
