[package]
name = "beercan-bot"
version = "0.3.0"
license = "MIT"
description = "Beercan community telegram bot."
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }

log = "^0.4"
rand = "^0.8"
regex = "^1.4"
futures = "^0.3"
lazy_static = "^1.4"
pretty_env_logger = "^0.4"

clap = { version = "^3.0", features = ["cargo", "derive"] }
tokio = { version = "^1.11", features = ["full"] }
